--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.AI},
       url={https://arxiv.org/abs/2504.02822}, 
+      selected={true},
 }
 
 @misc{fu2024financialfinetuninglargetime,
@@ -21,4 +22,5 @@
       archivePrefix={arXiv},
       primaryClass={q-fin.CP},
       url={https://arxiv.org/abs/2412.09880}, 
+      selected={true},
 }
