--- a/_posts/2023-08-30-running.md
+++ b/_posts/2023-08-30-running.md
@@ -4,28 +4,47 @@ title: A meditation about running
 date: 2023-08-30 14:24:00
 description: What I think about when running
 tags: formatting charts
-categories: sample-posts
+categories: sports
 chart:
   plotly: true
 ---
 I woke up today to a flood of posts of runners in singlets with finishers’ medals proudly hanging around their necks, standing shoulder to shoulder with huge smiles on their face. Right, this was the Singapore Army Half Marathon. I’m here now in Tokyo, there’s no way I could have taken part. But looking at their achievements, there were mixed feelings of happiness for everyone that took part and an unavoidable sense of being left behind. I guess that happens for every race you don’t participate in. 
+
 Later that afternoon, I decided to go out for a long run. Not really on a whim since Sundays have always been my dedicated long run days, but yes, seeing all the fast 21.1km (13.1mi) times made me push my distance from 15km to 20km this week. I wasn’t intending to clock a personal best in the half, but I thought I should at least pick up some pace today.
+
 And so I did. The first 5km were run at a decent split, averaging around 4:40 per km, nearly as fast I could consistently maintain for the whole duration while not feeling like the end of the world. Soon, I hit the halfway mark of my usual long run route – a familiar traffic junction on the other side of the Imperial Palace. I was faced with the decision to either complete the loop (and another loop to make it 20km) like I usually do and then head home to finish off the run, or make a right towards somewhere I have never been to. 
+
 I thought, ‘well, I don’t have much longer here in Tokyo anyway, much to be explored’, and dashed across the blinking green man. 
+
 I regretted my decision immediately as I spent much of the next 2km maneuvering through the crowd of Ginza (Tokyo’s famous shopping district). Nearly forgot how busy this place would be on a Sunday evening. 
+
 But soon, the atmosphere took another sharp change. Tranquility settled in as I approached the Tokyo Bay. It was one of the most beautiful moments that I could wish for amidst the hustle in the busiest metropolis in the world: the sunset near the horizon, faint sound of waves in the distance and the intermittent flickering of night lights just about to turn on. If I wanted to finish anywhere close to home, I should head back about now. 
+
 But no, I continued straight on. And yes, I was met with more pleasant surprises. This was the first time I realized that the bridges here light up at night, one in shades of green and another in rainbow hues that just looks magnificent even from afar. The sun went down, but the darkness of the night was accompanied with the brilliant lighting from the cityscape across the waters, like starry skyscrapers from the distance. I stopped to take some photos. My phone seemed to not work too well in the night lighting conditions, but I thought that this was still a moment I should capture. 
+
 At around this point was when I realized that my initial plan to run a fast 20km was probably falling apart from all the stopping at traffic lights and photo-taking I was doing. But that really didn’t matter. I was grateful for these pauses I get, for myself to catch a breath, and to just take in this scenic view that I’m sure I’ll miss in the next few months or years. I think it is true – only when you slow down do you get to enjoy the moments of simple happiness in life. 
+
 I crossed one or two bridges and started running around the shore. Another dreamy, surreal feeling hit again. The cries of seagulls from up above, the nonchalant laughter from families enjoying their picnics on the grass patch towards my right, the smell of barbecue smoke that didn’t tick my breathing off like it usually did but just added some fragrance that paired the smell of sea salt from the breeze that was slowly picking up. Some people were filming videos, perhaps a time lapse of the sunset, perhaps for some promotional event. There were just enough people to make the place lively, but not overcrowded. 
+
 I wanted to slow down to enjoy this moment where I felt peace at a place away from home, but at the same time I got a kick that made me unknowingly pick up some pace. I think this is exactly the kind of run that makes a day perfect. 
+
 Over this summer I have given several things a bit more thought: at the crossroads of decisions people make in college, what is it that I really wanted in life. There’s too much to say on this, and I’ll leave this for another piece of writing. But since we are at it, I should at least mention a bit about how exercise, particularly running, has been a part of me. 
+
 At this point, I’m not too sure what I even get out of running. I run when I’m restless, I run when I’m tired. I run when I’m happy, I run when I’m sad. I run when I’m bored, I run when I’m stressed. Sometimes, I wished I run less. Sometimes, I wished I run more. It’s like a friend that has accompanied me through some hard times, and a friend that I’m sharing my joyful moments with. I guess this is what it feels like for something to be a part of your life, and I guess I’m just happy enough to just be able to keep at it for as long as I can. 
+
 I wonder if this is the same with the runners I’m sharing this beautiful moment with. This image just conjures up some many emotions, about what running has given me, and what Japan has given me and how grateful I am to be able to enjoy this moment here today.
+
 Not too sure if this was from me hitting the throttle a bit too hard earlier, but I’m starting to feel droplets of sweat near my temples. I thought the sea breeze would have carried them away anyway. My nose is also a little stuffy, not sure if my breathing pattern is keeping up with my strides. 
+
 Thankfully, another traffic light came, and I had to stop. I reorganized my feelings and captured this photo on my phone. Honestly, I probably didn’t need to do that, I have burned enough of this image into my heart. 
+
 I kind of already messed up – I’m now a little too far out from home, the best I can hope for is to run towards some train station on the same line and take the train from there. I planned the rest of the route to finish around Tokyo Tower, for myself to check it out up close at night. 
+
 The rest of the run was nothing short of beautiful moments like this. After some uphills, and necessarily some downhills, and some more unexpected turns I made, some pleasant and surprising discoveries along the way, I finished the 20km journey a little out from Tokyo Tower, just barely enough to see it peeking out behind some buildings. I guess that would be a sight for another time. 
+
 I didn’t expect this piece of writing to end up this long, but I’m glad I was able to put at least some of my thoughts and feelings today into words. Nor did I really plan to write this before going for the run, just another one of those impromptu decisions that sprung from a short conversation with a friend. I guess it’s these unexpected turns in life that more often than not lead to pleasant encounters. 
+
 There’s so much I want to say about my experiences over this entire summer, so many amazing sights I want to share with you, and I promise it won’t be long before I deliver on those, but for now I’m grateful that you kept reading all the way here. 
+
 Till next time, 
 Shin 
