--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,3 +24,33 @@
       url={https://arxiv.org/abs/2412.09880}, 
       selected={true},
 }
+
+@article{arp_2020,
+  title={Dynamic trajectory and parametric resonance in coupled pendulum-beam system},
+  author={Fu, Xinghong},
+  journal={American Journal of Physics},
+  volume={88},
+  number={8},
+  pages={625--639},
+  year={2020},
+  publisher={American Association of Physics Teachers},
+  doi={10.1119/10.0001389},
+  url={https://doi.org/10.1119/10.0001389},
+  selected={true}
+}
+
+
+@article{biat_2020,
+doi = {10.1088/1361-6404/ab8069},
+url = {https://dx.doi.org/10.1088/1361-6404/ab8069},
+year = {2020},
+month = {jun},
+publisher = {IOP Publishing},
+volume = {41},
+number = {4},
+pages = {045806},
+author = {Fu, Xinghong},
+title = {An analysis in the non-inertial frame: ball in a rotating tube and the Taylor column},
+journal = {European Journal of Physics},
+abstract = {In this paper, we consider a small ball placed in a liquid-filled transparent cylinder sealed at both ends. When the tube is inclined and spun about the vertical axis like a centrifuge, a heavy ball (more dense than the liquid) will accelerate to either the top or bottom end of the tube depending on its release position while a light ball (less dense than the liquid) will instead tend towards an equilibrium position in the tube. Experimental measurements of the ball’s motion show large disagreements with Stokes’ theory of drag force on the ball. The formation of a rotating column of liquid induced by the Coriolis force, known as a Taylor column, significantly increases the drag on the ball. In this paper, we aim to investigate the equilibrium position as well as the motion path of the ball, with a numerical solution to the 3D time-dependent Navier–Stokes equation in the rotating frame of the tube, as a function of the inclination angle and angular velocity of rotation of the tube, which are experimentally verified for a ball in a water-filled tube. Increasing both the angular velocity and inclination angle will cause the equilibrium position to shift closer to the bottom of the tube, a faster motion of the ball, and larger deflections to the side of the tube. The formation of the Taylor column was also visualised in the rotating frame with dye injection.}
+}
